--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 * {
   font-family:'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  padding: 0;
+  border: border-box;
 }
 
 body {
@@ -50,8 +53,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  background-image: linear-gradient(rgb(255, 255, 255), white);
-  color: black;
+  color: #5daaed;
 }
 
 .searchBar {
@@ -82,7 +84,7 @@ nav ul li a:hover {
 }
 
 .searchBar button:hover {
-  color: #c23410;
+  color: rgba(157, 6, 6, 0.7);
 }
 
 #clear {
@@ -221,10 +223,73 @@ h1 {
   margin-left: 42%;
 }
 
-/*Css for the test Html page */
+/* Css for the test Html page
 p {
   color: white;
   margin-top: 250px;
   margin-left: 40%;
   font-size: 50px;
+} */
+
+/* css for the settings page */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  display: inline-block;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
